--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -6,6 +6,7 @@
     z-index: 9;
     top: 0;
     transform: translateX(-100%);
+    will-change: transform;
     // pointer-events: none;
 
     // &_show {
