--- a/src/pages/Work/Work.module.scss
+++ b/src/pages/Work/Work.module.scss
@@ -8,6 +8,7 @@
     top: 0;
     // clip-path: circle(0% at 100% 0%);
     transform: translateX(100%);
+    will-change: transform;
     // pointer-events: none;
 
     // &_show {
