--- a/src/index.scss
+++ b/src/index.scss
@@ -25,7 +25,7 @@ code {
 
 @import url(https://fonts.googleapis.com/css?family=Cabin);
 
-p, span {
+p, span, h1, h2, h3, h4 {
     letter-spacing: 4px;
     margin: 0;
     font-family: "Cabin", sans-serif;
