--- a/src/pages/Main/Menu/Menu.module.scss
+++ b/src/pages/Main/Menu/Menu.module.scss
@@ -9,6 +9,10 @@
     flex-direction: column;
     justify-content: space-between;
     color: rgba(255, 255, 255, 0.699);
+
+    &_disable {
+        pointer-events: none;
+    }
     
     &>div {
         display: flex;
