--- a/src/pages/Work/List.js/ListItem.js/ListItem.module.scss
+++ b/src/pages/Work/List.js/ListItem.js/ListItem.module.scss
@@ -6,6 +6,8 @@
     will-change: transition;
     color: white;
     fill: white;
+    display: flex;
+    flex-direction: column;
 
     &:hover {
         cursor: pointer;
@@ -33,6 +35,7 @@
     display: flex;
     flex-direction: column;
     gap: 14px;
+    flex: 1;
 }
 
 .title {
